[package]
name = "libfmod_ext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
track-callbacks = []

[dependencies]
magnus = { version = "0.3", features = ["rb-sys-interop"] }
libfmod = "2.2.603"
paste = "1.0.9"
rb-sys = "0.9.41"
once_cell = "1.16.0"
crossbeam-channel = "0.5.6"
