[package]
name = "libfmod_ext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
track-callbacks = []

[dependencies]
libfmod = { version = "*", path = "../../libfmod" }
magnus = { version = "0.5.4", features = ["rb-sys-interop"] }
paste = "1.0.9"
rb-sys = "0.9.79"
once_cell = "1.16.0"
crossbeam-channel = "0.5.6"
